--- a/javascriptv3/package.json
+++ b/javascriptv3/package.json
@@ -35,6 +35,7 @@
     "example_code/cross-services/feedback-sentiment-analyzer/SynthesizeAudio",
     "example_code/cross-services/feedback-sentiment-analyzer/TranslateText",
     "example_code/cross-services/photo-asset-manager",
+    "example_code/cross-services/transcribe-streaming-app",
     "example_code/cross-services/wkflw-topics-queues",
     "example_code/cross-services/wkflw-resilient-service",
     "example_code/dynamodb",
