Capturing code examples for the AWS Message Processing Framework for .NET.

--- a/dotnetv3/cross-service/MessageProcessingFramework/Handler/Handler.csproj
+++ b/dotnetv3/cross-service/MessageProcessingFramework/Handler/Handler.csproj
@@ -9,6 +9,8 @@
 
   <ItemGroup>
     <PackageReference Include="AWS.Messaging" Version="0.9.0" />
+    <PackageReference Include="AWSSDK.SSO" Version="3.7.300.74" />
+    <PackageReference Include="AWSSDK.SSOOIDC" Version="3.7.301.69" />
     <PackageReference Include="Microsoft.Extensions.Hosting" Version="8.0.0" />
   </ItemGroup>
 
