--- a/.github/workflows/validate-doc-metadata.yml
+++ b/.github/workflows/validate-doc-metadata.yml
@@ -18,7 +18,7 @@ jobs:
       - name: checkout repo content
         uses: actions/checkout@v4
       - name: validate metadata
-        uses: awsdocs/aws-doc-sdk-examples-tools@3b088b641afb9a9372779eccfce26a692615d47b
+        uses: awsdocs/aws-doc-sdk-examples-tools@2024-05-03-A
         with:
           doc_gen_only: "False"
           strict_titles: "True"
