--- a/cpp/example_code/cognito/tests/CMakeLists.txt
+++ b/cpp/example_code/cognito/tests/CMakeLists.txt
@@ -51,18 +51,16 @@ add_executable(
         ${CURRENT_TARGET}
 )
 
-# If the compiler is some version of Microsoft Visual C++, or another compiler simulating C++,
-# and building as shared libraries, then dynamically link to those shared libraries.
-if (MSVC AND BUILD_SHARED_LIBS)
-    if (AWSSDK_INSTALL_AS_SHARED_LIBS)
-        # set(BIN_SUB_DIR "/Debug") # If you are building from the command line, you may need to uncomment this
-        # and set the proper subdirectory to the executables' location.
+if (WINDOWS_BUILD)
+    # set(BIN_SUB_DIR "/Debug") # If you are building from the command line, you may need to uncomment this
+    # and set the proper subdirectory to the executables' location.
 
+    if (AWSSDK_INSTALL_AS_SHARED_LIBS)
         # Copy relevant AWS SDK for C++ libraries into the current binary directory for running and debugging.
         AWSSDK_CPY_DYN_LIBS(
                 CURRENT_TARGET_AWS_DEPENDENCIES
                 ""
-                ${CMAKE_CURRENT_BINARY_DIR} ${BIN_SUB_DIR}
+                ${CMAKE_CURRENT_BINARY_DIR}${BIN_SUB_DIR}
         )
     endif ()
 
@@ -71,8 +69,8 @@ if (MSVC AND BUILD_SHARED_LIBS)
             ${CURRENT_TARGET}
             POST_BUILD
             COMMAND ${CMAKE_COMMAND} -E copy
-            ${CMAKE_BINARY_DIR}/${CMAKE_INSTALL_BINDIR}/${CMAKE_BUILD_TYPE}/gtest.dll
-            ${CMAKE_CURRENT_BINARY_DIR}/${CMAKE_BUILD_TYPE}
+            ${CMAKE_BINARY_DIR}/${CMAKE_INSTALL_BINDIR}${BIN_SUB_DIR}/gtest.dll
+            ${CMAKE_CURRENT_BINARY_DIR}${BIN_SUB_DIR}
     )
 endif ()
 
