--- a/.doc_gen/metadata/s3_metadata.yaml
+++ b/.doc_gen/metadata/s3_metadata.yaml
@@ -937,6 +937,32 @@ s3_GetObjectLegalHold:
                 - S3LockWorkflow.dotnetv3.GetObjectLegalHold
   services:
     s3: {GetObjectLegalHold}
+s3_GetObjectLegalHoldConfiguration:
+  title: Get the legal hold configuration of an &S3; object using an &AWS; SDK
+  title_abbrev: Get the legal hold configuration of an object
+  synopsis: get the legal hold configuration of an S3 bucket.
+  category: Scenarios
+  languages:
+    Java:
+      versions:
+        - sdk_version: 2
+          github: javav2/example_code/s3
+          sdkguide:
+          excerpts:
+            - description:
+              snippet_tags:
+                - S3LockWorkflow.javav2.GetObjectLegalHold.main
+    .NET:
+      versions:
+        - sdk_version: 3
+          github: dotnetv3/S3/scenarios/S3ObjectLockScenario
+          sdkguide:
+          excerpts:
+            - description:
+              snippet_tags:
+                - S3LockWorkflow.dotnetv3.GetObjectLegalHold
+  services:
+    s3: {GetObjectLegalHold}
 s3_GetObjectLockConfiguration:
   languages:
     Java:
