--- a/python/example_code/bedrock-agent/requirements.txt
+++ b/python/example_code/bedrock-agent/requirements.txt
@@ -1,6 +1,9 @@
-boto3==1.33.8
-botocore==1.33.8
+boto3==1.34.98
+botocore==1.34.98
+certifi==2023.11.17
+charset-normalizer==3.3.2
 colorama==0.4.6
+idna==3.6
 iniconfig==2.0.0
 jmespath==1.0.1
 packaging==23.2
@@ -8,6 +11,7 @@ pluggy==1.3.0
 pytest==7.4.3
 python-dateutil==2.8.2
 PyYAML==6.0.1
-s3transfer==0.8.2
+requests==2.31.0
+s3transfer==0.10.1
 six==1.16.0
 urllib3==2.0.7
