--- a/python/example_code/bedrock-runtime/requirements.txt
+++ b/python/example_code/bedrock-runtime/requirements.txt
@@ -1,13 +1,13 @@
-boto3==1.34.55
-botocore==1.34.55
+boto3==1.34.98
+botocore==1.34.98
 colorama==0.4.6
 iniconfig==2.0.0
 jmespath==1.0.1
-packaging==23.2
-pluggy==1.3.0
-pytest==7.4.3
-pytest-asyncio==0.21.1
-python-dateutil==2.8.2
-s3transfer==0.10.0
+packaging==24.0
+pluggy==1.5.0
+pytest==8.1.1
+pytest-asyncio==0.23.6
+python-dateutil==2.9.0.post0
+s3transfer==0.10.1
 six==1.16.0
-urllib3==2.0.7
+urllib3==2.2.1
